# labor-tracker-scanner

./: .replit  Pasted-The-error-you-re-encountering-is-due-to-circular-imports-Circular-imports-occur-when-two-or-mor-1728654668087.txt  Pasted-looking-to-build-a-labor-tracking-system-that-leverages-barcode-or-scanner-technology-to-track-emplo-1728127076886.txt  analytics.py  api.py  app.py  apply_migration.py  db_management.py  models.py  pyproject.toml  replit.nix  routes.py
migrations/versions/: 0371f5a384fc_add_lunch_break_columns_to_timelog.py  12d6c3115000_add_location_to_task_model.py  44de1fa7f348_.py  59bf0d0f05bc_.py  6e2b8159a90c_add_bathroom_break_columns_to_timelog.py  8ce7481f38b5_add_barcode_column_to_task_table.py  a7cb9882fbb6_add_phone_number_to_employee_model.py  add_phone_number_to_employee.py  add_total_bathroom_break_duration.py  d9540b518b7f_.py  f76782ee1ace_add_status_column_to_timelog_model.py  fb9025ae3d0d_add_department_to_employee_model.py
static/css/: style.css
static/js/: analytics.js  barcode.js  employee_management.js  employee_management_v2.js  history.js  main.js  reports.js  task_management.js
templates/: analytics.html  base.html  dashboard.html  employee_history.html  employee_management.html  history.html  index.html  reports.html  task_history.html  task_management.html
