[tool.poetry]
name = "repl-nix-labor-tracker-scanner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask-migrate = "^4.0.7"
flask-restful = "^0.3.10"
flask-socketio = "^5.4.1"
tabulate = "^0.9.0"
twilio = "^9.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
